networkpolicy/networkpolicy__basic_kafka_setup__strimzi__exception__system__egress__ports__53__nr14__lines20.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: strimzi--exception--system--egress--ports--53--nr14
  namespace: strimzi
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
